--- a/student.ipynb
+++ b/student.ipynb
@@ -840,6 +840,180 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There seems to be some repeated values in the id column. I suspect this because the id column is a unique identifier."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                  0\n",
+       "date                0\n",
+       "price               0\n",
+       "bedrooms            0\n",
+       "bathrooms           0\n",
+       "sqft_living         0\n",
+       "sqft_lot            0\n",
+       "floors              0\n",
+       "waterfront       2376\n",
+       "view               63\n",
+       "condition           0\n",
+       "grade               0\n",
+       "sqft_above          0\n",
+       "sqft_basement       0\n",
+       "yr_built            0\n",
+       "yr_renovated     3842\n",
+       "zipcode             0\n",
+       "lat                 0\n",
+       "long                0\n",
+       "sqft_living15       0\n",
+       "sqft_lot15          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check the total number of null values in each column\n",
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The columns waterfront, view and yr_renovated have 2376, 63 and 3842 null values respectively\n",
+    "Lets look it further"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4.0 DATA CLEANING"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this section, we will prepare the data for the analysis by converting some of the categorical features such as waterfront into numeric ones. This will allow us to apply mathematical operations and statistical methods on the data.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Missing Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The column waterfront has 2376 missing values, which is 11.0 % of it's total\n",
+      "The column view has 63 missing values, which is 0.3 % of it's total\n",
+      "The column yr_renovated has 3842 missing values, which is 17.8 % of it's total\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A look at the percentage of missing values\n",
+    "for col in df.columns:\n",
+    "    if df[col].isnull().sum() > 0:\n",
+    "        perc = (df[col].isnull().sum()/len(df[col]))*100\n",
+    "        print(\"The column\", col,\"has\",df[col].isnull().sum(),\"missing values, which is\", round(perc, 1),\"% of it's total\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Waterfront Column\n",
+      "\n",
+      "Number of distinct elements is: 2 \n",
+      "\n",
+      "This is the count of unique values:\n",
+      "NO     19075\n",
+      "YES      146\n",
+      "Name: waterfront, dtype: int64 \n",
+      "\n",
+      "The unique values:\n",
+      "[nan 'NO' 'YES'] \n",
+      "\n",
+      "Number of missing values: 2376\n"
+     ]
+    }
+   ],
+   "source": [
+    "#waterfront column\n",
+    "print(\"The Waterfront Column\\n\")\n",
+    "\n",
+    "print(\"Number of distinct elements is:\", df['waterfront'].nunique(),\"\\n\")\n",
+    "\n",
+    "print(\"This is the count of unique values:\")\n",
+    "print(df['waterfront'].value_counts(),\"\\n\")\n",
+    "\n",
+    "print('The unique values:')\n",
+    "print(df['waterfront'].unique(),\"\\n\")\n",
+    "\n",
+    "print(\"Number of missing values:\",df['waterfront'].isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The unique values are nan, NO and YES. The most common value in this column is NO with 19075 entries while YES has only 146. Then, most of these houses don't have a waterfront hence I think it's safe to assume that the ones with missing values also don't have a waterfront. Therefore, I will replace the missing values with NO."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NO     21451\n",
+       "YES      146\n",
+       "Name: waterfront, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# replace missing values with 'NO'\n",
+    "df['waterfront'].fillna('NO',inplace=True)\n",
+    "\n",
+    "# confirm if the missing values have been replaced\n",
+    "df['waterfront'].value_counts()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
