--- a/student.ipynb
+++ b/student.ipynb
@@ -1015,10 +1015,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['NO', 'YES'], dtype=object)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check data type \n",
+    "df['waterfront'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that waterfront is of type object. This is not compatible for our model hence I need to convert it to type int\n",
+    "Lets convert it to int."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1], dtype=int64)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# replace the values 'NO' and 'YES' with '0' and '1' respectively\n",
+    "df['waterfront'].replace({'NO': 0, 'YES': 1}, inplace=True)\n",
+    "\n",
+    "#convert column to data type 'int'\n",
+    "df['waterfront'].astype(int)\n",
+    "\n",
+    "#confirm if change occured\n",
+    "df['waterfront'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The View Column\n",
+      "\n",
+      "Number of distinct elements is: 5 \n",
+      "\n",
+      "This is the count of unique values:\n",
+      "NONE         19422\n",
+      "AVERAGE        957\n",
+      "GOOD           508\n",
+      "FAIR           330\n",
+      "EXCELLENT      317\n",
+      "Name: view, dtype: int64 \n",
+      "\n",
+      "The unique values:\n",
+      "['NONE' nan 'GOOD' 'EXCELLENT' 'AVERAGE' 'FAIR'] \n",
+      "\n",
+      "Number of missing values: 63\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The View Column\\n\")\n",
+    "\n",
+    "print(\"Number of distinct elements is:\", df['view'].nunique(),\"\\n\")\n",
+    "\n",
+    "print(\"This is the count of unique values:\")\n",
+    "print(df['view'].value_counts(),\"\\n\")\n",
+    "\n",
+    "print('The unique values:')\n",
+    "print(df['view'].unique(),\"\\n\")\n",
+    "\n",
+    "print(\"Number of missing values:\",df['view'].isnull().sum())"
+   ]
   }
  ],
  "metadata": {
