--- a/student.ipynb
+++ b/student.ipynb
@@ -1110,6 +1110,56 @@
     "\n",
     "print(\"Number of missing values:\",df['view'].isnull().sum())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets replace the missing values with NONE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NONE         19485\n",
+       "AVERAGE        957\n",
+       "GOOD           508\n",
+       "FAIR           330\n",
+       "EXCELLENT      317\n",
+       "Name: view, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# replace missing values with 'NONE'\n",
+    "df['view'].fillna('NONE',inplace=True)\n",
+    "\n",
+    "# confirm if the missing values have been replaced\n",
+    "df['view'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Year Renovated Column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
