--- a/student.ipynb
+++ b/student.ipynb
@@ -1914,6 +1914,86 @@
     "# check to see if changes were made\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "drop id column since it's not useful and to also avoid crowding the dataframe with too much data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(columns='id', axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conversion of Data Types of Values in Columns from Object type to Float/Int Type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0       12826\n",
+       "?           454\n",
+       "600.0       217\n",
+       "500.0       209\n",
+       "700.0       208\n",
+       "          ...  \n",
+       "768.0         1\n",
+       "65.0          1\n",
+       "1960.0        1\n",
+       "602.0         1\n",
+       "266.0         1\n",
+       "Name: sqft_basement, Length: 304, dtype: int64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['sqft_basement'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float64')"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['sqft_basement'].replace('?','0.0',inplace=True)\n",
+    "\n",
+    "#convert column to type 'float'\n",
+    "df['sqft_basement'] = df['sqft_basement'].astype(float)\n",
+    "\n",
+    "#confirm if change occured\n",
+    "df['sqft_basement'].dtype"
+   ]
   }
  ],
  "metadata": {
